--- a/src/app/tabs/tab2/tab2.page.html
+++ b/src/app/tabs/tab2/tab2.page.html
@@ -1,13 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Routine
+      Favourites
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  
-  <app-explore-container [routineList]="boyRoutineData"></app-explore-container>
 
+  <app-explore-container [routineList]="favouriteRoutine"></app-explore-container>
+  
 </ion-content>
