--- a/src/app/tabs/tab1/tab1.page.html
+++ b/src/app/tabs/tab1/tab1.page.html
@@ -1,11 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Favourites
+      Alphabet Pronouncer
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <app-explore-container routineList="favouriteRoutine"></app-explore-container>
+  
+  <app-explore-container [routineList]="routineData"></app-explore-container>
+
 </ion-content>
