--- a/src/app/explore-container/explore-container.component.scss
+++ b/src/app/explore-container/explore-container.component.scss
@@ -1,5 +1,5 @@
 .container {
-  height: 90%;
+  height: 80%;
 }
 
 #container a {
@@ -19,12 +19,12 @@ ion-card {
   float    : right;
   position : relative;
   font-size: 40px;
-  color: grey;
-  z-index: 2;
+  color    : grey;
+  z-index  : 2;
 }
 
 .no-click {
-  pointer-events:none
+  pointer-events: none
 }
 
 .color-red {
@@ -46,8 +46,8 @@ ion-icon {
 }
 
 img {
-  height: 50%;
-  width : 50%;
+  height    : 100%;
+  width     : 100%;
 }
 
 .card-title {
@@ -55,10 +55,11 @@ img {
 }
 
 .title-wrapper {
-  display        : flex;
-  justify-content: center;
-  align-items    : center;
-  height         : 30%;
+  // display        : flex;
+  // justify-content: center;
+  // align-items    : center;
+  // height         : 30%;
+  margin-top: 10%;
 }
 
 .left-icon {
@@ -84,4 +85,14 @@ img {
 
 .item-center {
   text-align: center;
+}
+
+.main-content {
+  display        : flex;
+  flex-direction : column;
+  justify-content: center;
+  align-items    : center;
+  height         : 100%;
+  width          : 100%;
+  position       : absolute;
 }
