Fixed speech not workingg

--- a/src/app/explore-container/explore-container.component.scss
+++ b/src/app/explore-container/explore-container.component.scss
@@ -55,11 +55,8 @@ img {
 }
 
 .title-wrapper {
-  // display        : flex;
-  // justify-content: center;
-  // align-items    : center;
-  // height         : 30%;
   margin-top: 10%;
+  margin-bottom: 5%;
 }
 
 .left-icon {
