--- a/src/app/tabs/tab1/tab1.page.html
+++ b/src/app/tabs/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Alphabet Pronouncer
+      Routine Pronouncer
     </ion-title>
   </ion-toolbar>
 </ion-header>
